# Lab-Stuff

./: .gitignore  README.org  bunny_all.bat  test.txt
agenda/: August.org  July.org  general.org
crawlers/: cvpr.py
crawlers/conferences/conferences/: items.py  settings.py
devices/: README.org  checkports.py  glove.py  glove2.py  gloveosx.py  server.py  server2.py
devices/leap/: sample.py
devices/leap/src/: controller.py  sample.py  (+2 more)
devices/leftglove2/: leftglove2.pde
documentation/: README.org  README.tex
latex/handdoc/: README.org  README.tex
latex/haptic paper/: Haptics_VR_interface (1).docx  Haptics_VR_interface (2).docx  haptics_paper.aux  haptics_paper.bbl  haptics_paper.blg  haptics_paper.tex  ref.bib
latex/proposal/: proposal.aux  proposal.tex
latex/report/: master.aux  master.out  master.tdo  master.tex  master.toc
latex/slides/: motivation.tex  presentation.aux  presentation.nav  presentation.org  presentation.out  presentation.snm  presentation.tex  presentation.toc  sinapse.aux  sinapse.blg  sinapse.nav  sinapse.out  sinapse.tex  sinapse.toc
lisp/: test.cl
project/: Client.cs  README.org  SharpConnect.cs  udpclient.py  udpserver.py
project/ARUnity/: ARUnity.CSharp.Editor.csproj  ARUnity.CSharp.csproj  ARUnity.sln
project/BackEngine/: CMakeLists.txt  README.org
project/BackEngine/include/project/: artclient.hpp
project/BackEngine/src/: ARTClient.cpp  CMakeLists.txt  artdummy.cpp  artframe.cpp  main.cpp
project/GesEngine/: GesEngine.pro  Makefile  README.org  artclient.cpp  artclient.h  cluster.cpp  cluster.h  connectiondialog.cpp  connectiondialog.h  connectiondialog.ui  gesserver.cpp  gesserver.h  gesvisulizer.cpp  gesvisulizer.h  glwidget.cpp  glwidget.h  kmeans.cpp  kmeans.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  point.cpp  point.h  ui_mainwindow.h
project/RobotDQN/: README.org  dvsdqn.py  robot.py  run_dqn.py  test_theano.py
project/ThreadTest/: ThreadTest.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myjob.cpp  myjob.h  myserver.h  mythread.h  myudp.cpp  myudp.h
project/VRControlling/: Assembly-CSharp-Editor.csproj  Assembly-CSharp-firstpass.csproj  Assembly-CSharp.csproj  VRControlling.CSharp.Editor.csproj  VRControlling.CSharp.Plugins.csproj  VRControlling.CSharp.csproj  VRControlling.Editor.csproj  VRControlling.Plugins.csproj  VRControlling.csproj  VRControlling.sln
project/analysis/: animation.py  capture_optical.txt  capture_optical1.txt  cluster.py  conv.py  data_operation.py  features.py  funwithconv.py  noise.py  optical.py  test2.py  test3.py  test_loop.py
project/atari/: robot.py
project/deeplearning/: logreg.py  vggtf.py
project/dvsrl/: README.org  action.py  cups.aedat  data-1-y.txt  dvsdata.aedat  echoserver.py  features.py  loadaerdat.py  raw_udp.py  realtime.py  record_data.py  socktest.py  urcontrol.py
project/simulations/: README.org
videoSync/: main.py
website/: .bowerrc  Dockerfile  bower.json  design.org  karma.conf.js  package.json
website/app/: app.js  index.html
(+128 files in other folders)
